--- a/html/02_Forms/01_Form.html
+++ b/html/02_Forms/01_Form.html
@@ -10,10 +10,19 @@
 h1,h2 {
 text-align: center;
 }
+#wrapBox{
+	width : 300px;
+	margin : 0 auto; 
+	padding-top: 30px;
+	padding-bottom: 30px;
+	box-sizing: border-box;
+	border-bottom:  5px solid black;
+}
 </style>
   </head>
   <body>
    <h1>Form controls</h1>
+   <div id="wrapBox">
   <div class="mb-3">
   <label for="exampleFormControlInput1" class="form-label">Email address</label>
   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
@@ -22,10 +31,62 @@ text-align: center;
   <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
   <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 </div>
+</div>
 <h2>사이즈 </h2>
+<div id="wrapBox">
 <input class="form-control form-control-lg" type="text" placeholder=".form-control-lg" aria-label=".form-control-lg example">
 <input class="form-control" type="text" placeholder="Default input" aria-label="default input example">
 <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
+</div>
+<h2>타입별 인풋</h2>
+<div id="wrapBox">
+<h3>text</h3>
+<input class="form-control" type="text" placeholder="Default input" aria-label="default input example">
+<h3>color</h3>
+<input class="form-control" type="color" placeholder="Default input" aria-label="default input example">
+<h3>checkbox</h3>
+<input class="form-control" type="checkbox" placeholder="Default input" aria-label="default input example">
+<h3>date</h3>
+<input class="form-control" type="date" placeholder="Default input" aria-label="default input example">
+<h3>datetime-local</h3>
+<input class="form-control" type="datetime-local" placeholder="Default input" aria-label="default input example">
+<h3>email</h3>
+<input class="form-control" type="email" placeholder="Default input" aria-label="default input example">
+<h3>file</h3>
+<input class="form-control" type="file" placeholder="Default input" aria-label="default input example">
+<h3>hidden</h3>
+<input class="form-control" type="hidden" placeholder="Default input" aria-label="default input example">
+<h3>image</h3>
+<input class="form-control" type="image" placeholder="Default input" aria-label="default input example">
+<h3>password</h3>
+<input class="form-control" type="password" placeholder="Default input" aria-label="default input example">
+<h3>month</h3>
+<input class="form-control" type="month" placeholder="Default input" aria-label="default input example">
+<h3>radio</h3>
+<input class="form-control" type="radio" placeholder="Default input" aria-label="default input example">
+<h3>range</h3>
+<input class="form-control" type="range" placeholder="Default input" aria-label="default input example">
+<h3>reset</h3>
+<input class="form-control" type="reset" placeholder="Default input" aria-label="default input example">
+<h3>search</h3>
+<input class="form-control" type="search" placeholder="Default input" aria-label="default input example">
+<h3>submit</h3>
+<input class="form-control" type="submit" placeholder="Default input" aria-label="default input example">
+<h3>tel</h3>
+<input class="form-control" type="tel" placeholder="Default input" aria-label="default input example">
+<h3>time</h3>
+<input class="form-control" type="time" placeholder="Default input" aria-label="default input example">
+<h3>url</h3>
+<input class="form-control" type="url" placeholder="Default input" aria-label="default input example">
+<h3>week</h3>
+<input class="form-control" type="week" placeholder="Default input" aria-label="default input example">
+</div>
+<h2>Disabled</h2>
+<div id="wrapBox">
+<input class="form-control" type="text" placeholder="Disabled input" aria-label="Disabled input example" disabled>
+<input class="form-control" type="text" value="Disabled readonly input" aria-label="Disabled input example" disabled readonly>
+</div>
+
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
