--- a/html/02_Forms/02_SaveButton.html
+++ b/html/02_Forms/02_SaveButton.html
@@ -6,14 +6,45 @@
     <title>SaveButton</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+<script src="../js/jquery-3.6.4.min.js"></script>
 <style type="text/css">
 h1,h2 {
 text-align: center;
 }
+#wrap {
+  width: 300px;
+  margin: 0 auto;
+}
 </style>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>SaveButton</h1>
+    <div id="wrap">
+      <label for="id" class="form-label">id</label>
+    <input id="id" class="form-control" type="text" placeholder="id" aria-label="default input example"">
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    </div>
+    <input class="btn btn-primary" type="button" value="Save" id="btn">
+  </div>
+
+  <script type="text/javascript">
+  		$("#id").val("전태로드");
+  
+        $("#btn").on("click",function(){
+//             alert("저어자앙");
+			alert("id: "+ $("#id").val()+ "입니다.");
+			$("#id").val("워로드");
+			alert("id: "+ $("#id").val()+ "입니다.");
+			
+			const id = $("#id");
+			alert(id.val());
+			
+        });
+
+  </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
 </html>
