--- a/html/02_Forms/06_01~05remind.html
+++ b/html/02_Forms/06_01~05remind.html
@@ -22,7 +22,7 @@ text-align: center;
     <div id="wrap">
     <form>
   <div class="mb-3">
-    <label for="id" class="form-label">id</label>
+    <label for="id" class="form-label">Id</label>
     <input type="text" class="form-control" id="id" aria-describedby="emailHelp" value="countercrow">
     <div id="idHelp" class="form-text">아이디를 입력해주세요.</div>
   </div>
@@ -32,22 +32,22 @@ text-align: center;
     <div id="passwordHelp" class="form-text">패스워드를 입력해주세요.</div>
   </div>
    <div class="mb-3">
-    <label for="email" class="form-label">email</label>
+    <label for="email" class="form-label">Email</label>
     <input type="email" class="form-control" id="email"value="tndurqh@gmail.com">
     <div id="emailHelp" class="form-text">이메일을 입력해주세요.</div>
   </div>
    <div class="mb-3">
-    <label for="date" class="form-label">birth</label>
+    <label for="date" class="form-label">Birth</label>
     <input type="date" class="form-control" id="date"value="1993-04-16">
     <div id="dateHelp" class="form-text">생년읠일을 입력해주세요</div>
   </div>
    <div class="mb-3">
-    <label for="color" class="form-label">color</label>
+    <label for="color" class="form-label">Color</label>
     <input type="color" class="form-control" id="color" value="#ffffff">
     <div id="colorHelp" class="form-text">자신을 표현하고 싶은 색상을 선택해주세요</div>
   </div>
   <div class="mb-3">
-    <label for="time" class="form-label">time</label>
+    <label for="time" class="form-label">Time</label>
     <input type="time" class="form-control" id="time"  value="12:55">
     <div id="timeHelp" class="form-text">생성 시간을 선택해주세요</div>
   </div>
@@ -55,7 +55,7 @@ text-align: center;
   <button type="submit" class="btn btn-primary" id="btn">회원가입</button>
   <hr>
   <div class="mb-3">
-    <label for="password_Old" class="form-label">password</label>
+    <label for="password_Old" class="form-label">Password</label>
     <input type="password" class="form-control" id="password_Old"value="">
     <div id="password_OldHelp" class="form-text">패스워드를 입력해주세요.</div>
   </div><div class="mb-3">
