--- a/html/02_Forms/11_homeWork.html
+++ b/html/02_Forms/11_homeWork.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>07_Checks & radios</title>
+    <title>숙제(radio)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <script src="../js/jquery-3.6.4.min.js"></script>
@@ -19,7 +19,7 @@ margin-bottom: 20px;
 </style>
   </head>
   <body>
-    <h1>07_Checks & radios</h1>
+    <h1>11_homework</h1>
     <div id="wrap">
     <h2>주문 메뉴</h2> 
     <from>
