--- a/html/03_admin_side/01_230515.html
+++ b/html/03_admin_side/01_230515.html
@@ -20,6 +20,7 @@ margin-bottom: 20px;
   margin: 100px auto;
 }
 #profile #profile_list{display:flex;}
+#profile #
 #profile_Img img {
 width : 50px;
 height: 50px;
