--- a/html/03_admin_side/01_230515.html
+++ b/html/03_admin_side/01_230515.html
@@ -7,33 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <script src="../js/jquery-3.6.4.min.js"></script>
-<style type="text/css">
-* {margin: 0; padding: 0; border: 0;}
-ul {list-style: none;}
-a {text-decoration: none;}
-h1,h2 {
-text-align: center;
-margin-bottom: 20px;
-}
-#wrap {
-  width: 300px;
-  margin: 100px auto;
-}
-#profile #profile_list{display:flex;}
-#profile #
-#profile_Img img {
-width : 50px;
-height: 50px;
-border-radius: 50%
-}
-header {
-width: 100%;
-height: 80px; display: flex; justify-content: space-between;
-}
-#leng_Box{
-height : 30px;
-}
-</style>
+<script src="https://kit.fontawesome.com/5bad75f859.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
   <header>
@@ -50,22 +25,177 @@ height : 30px;
 		</li>
   </ul>
   </div>
-  <div id="leng" class="btn-group">
-  <button id="leng_Box" type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-  언어
-  </button>
-  <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="#">한국어</a></li>
-    <li><a class="dropdown-item" href="#">English</a></li>
-    <li><a class="dropdown-item" href="#">中國語</a></li>
-    <li><a class="dropdown-item" href="#">日本語</a></li>
-    <li><a class="dropdown-item" href="#">Español</a></li>
-    <li><a class="dropdown-item" href="#">العربية</a></li>        
-  </ul>
-</div>
+  <select class="form-select form-select-sm container-sm" aria-label=".form-select-sm example" id="leng">
+  <option selected>언어</option>
+  <option value="1">한국어</option>
+  <option value="2">English</option>
+  <option value="3">中國語</option>
+  <option value="3">日本語</option>
+  <option value="3">Español</option>
+  <option value="3">العربية</option>
+</select>
   </header>
-   
-    
+  <nav class="navbar navbar-expand-lg bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">회원관리</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">서비스관리</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">사이트관리</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">로그관리</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">시스템관리</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">서버관리</a>
+        </li>
+        </ul>
+     </div>
+  </div>
+</nav>
+   <div id="side_nav">
+   <div class="accordion" id="accordionPanelsStayOpenExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+        Home
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+      <div class="accordion-body">
+        <a rel="#">111</a>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+        Dashboard
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+      <div class="accordion-body">
+        <a rel="#">111</a>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+        Orders
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+      <div class="accordion-body">
+        <a rel="#">111</a>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="panelsStayOpen-headingF">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseF" aria-expanded="false" aria-controls="panelsStayOpen-collapseF">
+        Account
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseF" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingF">
+      <div class="accordion-body">
+        <a rel="#">111</a>
+      </div>
+    </div>
+  </div>
+</div>
+   </div>
+   <h2>국가코드 관리</h2>
+   <div id="searchBox">
+   <select class="form-select form-select-sm search" >
+  <option selected>No.</option>
+  <option value="1">1</option>
+  <option value="2">2</option>
+  <option value="3">3</option>
+  </select>
+  <input type="date" class="search form-control-ms" id="searchDate" >
+  <input type="text" class="search form-control-ms" id="startDate" placeholder="등록일">
+  <input type="text" class="search form-control-ms" id="endDate" placeholder="종료일">
+  <select class="form-select form-select-sm search" >
+  <option selected>검색 구분</option>
+  <option value="1">국가 이름</option>
+  <option value="2">국가 코드</option>
+  <option value="3">Seq</option>
+  </select>
+  <input type="text" class="search form-control-ms" id="search" placeholder="검색어 입력">
+  <button type="button" class="btn btn-warning"><i class="fa-solid fa-magnifying-glass"></i></button>
+   </div>
+    <div id="table">
+    <table class="table table-striped">
+  <thead>
+    <tr>
+		<th scope="col"><input class="form-check-input" type="checkbox" value="" id="all_check"name="all_check"></th>
+    	<th scope="col">No.</th>
+    	<th scope="col">Seq</th>
+    	<th scope="col">국가 이름</th>
+    	<th scope="col">국가 이름(en)</th>
+    	<th scope="col">국가 코드(2자리)</th>
+    	<th scope="col">국가 코드(3자리)</th>
+    	<th scope="col">사용</th>
+    	<th scope="col">순서</th>
+    	<th scope="col">등록일</th>
+    	<th scope="col">수정일</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+	    <th scope="col"><input class="form-check-input" type="checkbox" value="" id="check1"name="check"></th>
+	    <th scope="row">1</th>
+	    <td>1</td>
+	    <td>대한민국</td>
+	    <td>Korea</td>
+	    <td>KR</td>
+	    <td>KOR</td>
+	    <td>Y</td>
+	    <td>1</td>
+	    <td>2023-05-15</td>
+	    <td>2023-05-15</td>
+    </tr>
+   <tr>
+	    <th scope="col"><input class="form-check-input" type="checkbox" value="" id="check2"name="check"></th>
+	    <th scope="row">2</th>
+	    <td>2</td>
+	    <td>중국</td>
+	    <td>Chaina</td>
+	    <td>CN</td>
+	    <td>CHN</td>
+	    <td>N</td>
+	    <td>2</td>
+	    <td>2023-05-15</td>
+	    <td>2023-05-15</td>
+    </tr><tr>
+	    <th scope="col"><input class="form-check-input" type="checkbox" value="" id="check3"name="check"></th>
+	    <th scope="row">3</th>
+	    <td>3</td>
+	    <td>미국</td>
+	    <td>America</td>
+	    <td>US</td>
+	    <td>USA</td>
+	    <td>Y</td>
+	    <td>3</td>
+	    <td>2023-05-15</td>
+	    <td>2023-05-15</td>
+    </tr>
+  </tbody>
+</table>    
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
 </html>
