숙제와 관리자 페이지변경

--- a/html/03_admin_side/01_230515.html
+++ b/html/03_admin_side/01_230515.html
@@ -75,7 +75,17 @@
     </h2>
     <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
       <div class="accordion-body">
-        <a rel="#">111</a>
+        <a rel="#">회원관리</a>
+      </div>
+    </div>
+     <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+      <div class="accordion-body">
+        <a rel="#">서비스관리</a>
+      </div>
+    </div>
+     <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+      <div class="accordion-body">
+        <a rel="#">사이트관리</a>
       </div>
     </div>
   </div>
@@ -136,6 +146,8 @@
   </select>
   <input type="text" class="search form-control-ms" id="search" placeholder="검색어 입력">
   <button type="button" class="btn btn-warning"><i class="fa-solid fa-magnifying-glass"></i></button>
+  <button type="button" class="btn btn-danger"><i class="fa-solid fa-rotate-right"></i></button>
+  
    </div>
     <div id="table">
     <table class="table table-striped">
