--- a/html/03_admin_side/01_230515.html
+++ b/html/03_admin_side/01_230515.html
@@ -145,69 +145,124 @@
   <option value="3">Seq</option>
   </select>
   <input type="text" class="search form-control-ms" id="search" placeholder="검색어 입력">
-  <button type="button" class="btn btn-warning"><i class="fa-solid fa-magnifying-glass"></i></button>
-  <button type="button" class="btn btn-danger"><i class="fa-solid fa-rotate-right"></i></button>
+  <button id="btnSearch" type="button" class="btn btn-warning btn_type1"><i class="fa-solid fa-magnifying-glass"></i></button>
+  <button id="btnReset" type="button" class="btn btn-danger btn_type1"><i class="fa-solid fa-rotate-right"></i></button>
   
    </div>
-    <div id="table">
-    <table class="table table-striped">
-  <thead>
-    <tr>
-		<th scope="col"><input class="form-check-input" type="checkbox" value="" id="all_check"name="all_check"></th>
-    	<th scope="col">No.</th>
-    	<th scope="col">Seq</th>
-    	<th scope="col">국가 이름</th>
-    	<th scope="col">국가 이름(en)</th>
-    	<th scope="col">국가 코드(2자리)</th>
-    	<th scope="col">국가 코드(3자리)</th>
-    	<th scope="col">사용</th>
-    	<th scope="col">순서</th>
-    	<th scope="col">등록일</th>
-    	<th scope="col">수정일</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-	    <th scope="col"><input class="form-check-input" type="checkbox" value="" id="check1"name="check"></th>
-	    <th scope="row">1</th>
-	    <td>1</td>
-	    <td>대한민국</td>
-	    <td>Korea</td>
-	    <td>KR</td>
-	    <td>KOR</td>
-	    <td>Y</td>
-	    <td>1</td>
-	    <td>2023-05-15</td>
-	    <td>2023-05-15</td>
-    </tr>
-   <tr>
-	    <th scope="col"><input class="form-check-input" type="checkbox" value="" id="check2"name="check"></th>
-	    <th scope="row">2</th>
-	    <td>2</td>
-	    <td>중국</td>
-	    <td>Chaina</td>
-	    <td>CN</td>
-	    <td>CHN</td>
-	    <td>N</td>
-	    <td>2</td>
-	    <td>2023-05-15</td>
-	    <td>2023-05-15</td>
-    </tr><tr>
-	    <th scope="col"><input class="form-check-input" type="checkbox" value="" id="check3"name="check"></th>
-	    <th scope="row">3</th>
-	    <td>3</td>
-	    <td>미국</td>
-	    <td>America</td>
-	    <td>US</td>
-	    <td>USA</td>
-	    <td>Y</td>
-	    <td>3</td>
-	    <td>2023-05-15</td>
-	    <td>2023-05-15</td>
-    </tr>
-  </tbody>
-</table>    
+<div id="mainContent">
+  <div id="total">Total : n</div> 
+  <select class="form-select form-select-sm container-sm" aria-label=".form-select-sm example" id="rows">
+    <option value="10" selected>10</option>
+    <option value="15">15</option>
+    <option value="20">20</option>
+    <option value="25">25</option>
+    <option value="30">30</option>
+  </select>
+  <div id="table">
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th scope="col"><input class="form-check-input" type="checkbox" value="" id="all_check"name="all_check"></th>
+          <th scope="col">No.</th>
+          <th scope="col">Seq</th>
+          <th scope="col">국가 이름</th>
+          <th scope="col">국가 이름(en)</th>
+          <th scope="col">국가 코드(2자리)</th>
+          <th scope="col">국가 코드(3자리)</th>
+          <th scope="col">사용</th>
+          <th scope="col">순서</th>
+          <th scope="col">등록일</th>
+          <th scope="col">수정일</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="col"><input class="form-check-input" type="checkbox" value="" id="check1"name="check"></th>
+          <th scope="row">1</th>
+          <td>1</td>
+          <td>대한민국</td>
+          <td>Korea</td>
+          <td>KR</td>
+          <td>KOR</td>
+          <td>Y</td>
+          <td>1</td>
+          <td>2023-05-15</td>
+          <td>2023-05-15</td>
+        </tr>
+        <tr>
+          <th scope="col"><input class="form-check-input" type="checkbox" value="" id="check2"name="check"></th>
+          <th scope="row">2</th>
+          <td>2</td>
+          <td>중국</td>
+          <td>Chaina</td>
+          <td>CN</td>
+          <td>CHN</td>
+          <td>N</td>
+          <td>2</td>
+          <td>2023-05-15</td>
+          <td>2023-05-15</td>
+        </tr>
+        <tr>
+          <th scope="col"><input class="form-check-input" type="checkbox" value="" id="check3"name="check"></th>
+          <th scope="row">3</th>
+          <td>3</td>
+          <td>미국</td>
+          <td>America</td>
+          <td>US</td>
+          <td>USA</td>
+          <td>Y</td>
+          <td>3</td>
+          <td>2023-05-15</td>
+          <td>2023-05-15</td>
+        </tr>
+      </tbody>
+    </table>  
+    <div id="iconBox1">
+      <button id="btnClose" type="button" class="btn btn-danger btn_type1"><i class="fa-solid fa-xmark"></i></button>
+      <button id="btnDelete" type="button" class="btn btn-danger btn_type1" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><i class="fa-solid fa-trash-can"></i></button>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <nav aria-label="Page navigation " id="navTable">
+      <ul class="pagination">
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link active" href="#">1</a></li>
+        <li class="page-item"><a class="page-link " href="#">2</a></li>
+        <li class="page-item"><a class="page-link " href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <div id="iconBox2">
+      <button id="btnExcel" type="button" class="btn btn-success btn_type1"><i class="fa-regular fa-file-excel"></i></button>
+      <button id="btnAdd" type="button" class="btn btn-primary btn_type1"><i class="fa-solid fa-plus"></i></button>
+    </div>
+  </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">선택한 데이터를 삭제합니다.</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        정말 삭제하시겠습니까?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary " data-bs-dismiss="modal">아니요</button>
+        <button type="button" class="btn btn-primary ">예</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
 </html>
