--- a/html/03_admin_side/01_230515.html
+++ b/html/03_admin_side/01_230515.html
@@ -8,12 +8,11 @@
     <script src="../js/jquery-3.6.4.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/5bad75f859.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-    <script src="//code.jquery.com/jquery.min.js"></script>
-    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-    <script src="../js/adminPage.js"></script>
     <link rel="stylesheet" href="./css/style.css">
-  </head>
+    <link rel="stylesheet" href="./css/jquery-ui.min.css">
+   	<script src="../js/jquery-ui.min.js"></script>
+  	<script src="../js/adminPage.js"></script>
+    </head>
   <body>
 <header>
 <div id="logo_Main">메인로고</div>
